# vidya

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
examples/: advanced.py  basic.py  run_tutoring_session.py
src/: __main__.py  core.py  health.py  utils.py
src/vidya/: __init__.py  cli.py  curriculum.py  models.py  report.py  student.py
src/vidya/tutor/: __init__.py  difficulty_adapter.py  gap_detector.py  knowledge_assessor.py  lesson_generator.py  spaced_repetition.py
tests/: test_benchmark.py  test_core.py  test_integration.py  test_spaced_repetition.py  test_tutor.py
